Renamed Index.html to index.html

--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,8 @@
 
 <div id="main-container" class="container">
 	<section class="main-section">
+			<div class="row">
+					<div class="col-md-4">
 		<h1>About Me</h1>
 
 		<img src="assets/images/image2.png" class="auth-image" alt="Ana">
