--- a/contact.html
+++ b/contact.html
@@ -8,12 +8,19 @@
     
     <header id="masthead">
         <div class="container">
-            <a href="index.html" id="logo">Ana Suvac</a>
-            <nav>
-                <a href="index.html">About</a>
+                <div class="row">
+                        <div class="col-sm">
+           <a href="index.html" id="logo">Ana Suvac</a>
+           </div>
+           <nav>
+                <div class="col-sm">
+             <a href="index.html">About</a>
                 <a href="portfolio.html">Portfolio</a>
                 <a href="contact.html">Contact</a>
+                </div>
+            </div>
             </nav>
+        </button>
         </div>
     </header>
     
@@ -29,11 +36,11 @@
                     </li>
                     <li>
                         <label for="email">Email</label>
-                        <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
+                        <input type="email" id="email" name="email" cols="30" placeholder="example@gmail.com" required="required">
                     </li>
                     <li>
                         <label for="message">Message</label>
-                        <textarea id="message" name="message" required="required"></textarea>
+                        <textarea id="message" name="message" rows="10" cols="30" required="required"></textarea>
                     </li>
                 </ul>
                 <input type="submit">
