--- a/contact.html
+++ b/contact.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="en-us"><head>
         <meta charset="UTF-8">
         <title>Contact |Ana Suvac </title>
@@ -15,7 +16,6 @@
                 <a href="contact.html">Contact</a>
             </nav>
         </div>
-          
     </header>
     
     <div id="main-container" class="container">
@@ -30,11 +30,11 @@
                     </li>
                     <li>
                         <label for="email">Email</label>
-                        <input type="email" id="email" name="email" cols="30" placeholder="example@gmail.com" required="required">
+                        <input type="email" id="email" name="email" placeholder="example@gmail.com" required="required">
                     </li>
                     <li>
                         <label for="message">Message</label>
-                        <textarea id="message" name="message" rows="10" cols="30" required="required"></textarea>
+                        <textarea id="message" name="message" required="required"></textarea>
                     </li>
                 </ul>
                 <input type="submit">
